# Axon

./: .gitignore  CONTRIBUTING.md  README.md  setup_axon.py
PRESENTATION_USB/: 01_PANORAMICA_PROTOCOLLO.md  02_PRESENTATION_KIT.md  03_MANIFESTO_GOVERNANCE.md  05_COMMAND_CENTER_DASHBOARD.md  README_INIZIA_QUI.md
PRESENTATION_USB/PROVE_VISIVE/: fonetica per testo per filmato.txt  testo per filmato.txt
axon_protocol/: .gitignore  Cargo.toml  GENESIS_CERTIFICATE.txt  License.txt  build_err.txt
axon_protocol/drafts/: README.md
axon_protocol/src/: ._lib.rs  ._main.rs  analytics.rs  broadcasting.rs  classifier.rs  game_theory.rs  governance.rs  lib.rs  main.rs  stealth_pulse.rs  verifier.rs  watermark.rs
contracts/: AxonGovernance.sol
docs/: AXON_Command_Center_Overview.md  AXON_Economic_Proposal.md  AXON_PROTOCOL_V2026_1.md  AXON_Protocol_Overview.md  presentation.md
presentation/: AXON_Governance_Manifesto.md
