[package]
name = "axon_protocol"
version = "0.1.0"
edition = "2021"
authors = ["Giuseppe Tagliarini <architect@axon-protocol.local>"]
description = "Universal Provenance, Integrity & Neural Telemetry Layer for Generative AI. Features: Real-time Identity Mining & Sovereign Content Tracking."

[dependencies]
# Core Logic
chrono = "0.4"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security & Telemetry (Le nuove sentinelle)
reqwest = { version = "0.11", features = ["blocking"] }
machine-uid = "0.2"

[lib]
name = "axon_protocol"
path = "src/lib.rs"

[[bin]]
name = "axon_engine"
path = "src/main.rs"