[package]
name = "axon_protocol"
version = "0.1.0"
edition = "2021"
authors = ["Giuseppe Tagliarini <architect@axon-protocol.local>"]
description = "Universal Provenance, Integrity & Neural Telemetry Layer for Generative AI."
default-run = "axon_engine"

[dependencies]
# Logica Core e Tempo
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Rete e Telemetria (Configurati per il dialogo Mac-Lenovo)
reqwest = { version = "0.11", features = ["blocking", "json"] }
machine-uid = "0.2"
tokio = { version = "1.0", features = ["full"] }

# Web Server (per il Master Node)
axum = "0.7" 
warp = { version = "0.3", features = ["tokio-tungstenite"] } 

[lib]
name = "axon_protocol"
path = "src/lib.rs"

[[bin]]
name = "axon_engine"
path = "src/main.rs"

[[bin]]
name = "master_node"
path = "src/bin/master_node.rs"